<resources>
    <string name="app_name">Movies</string>

    <!--Menu options-->
    <string name="action_share">Share</string>

    <string name="text_filters">Filters</string>

    <!--Spinner options-->
    <string name="spinner_popular">Popular</string>
    <string name="spinner_top_rated">Top Rated</string>
    <string name="spinner_favourite">Favourites</string>

    <string name="sort_popular">popular</string>
    <string name="sort_top_rated">top_rated</string>

    <string name="error_message">Could not load, Please try again</string>

    <!-- placeholders -->
    <string name="movie_poster">Movie poster</string>
    <string name="movie_banner">Movie banner</string>

    <string name="movie_average_vote">Avg rating : </string>
    <string name="movie_language">Language: </string>

    <string name="movie_title">Title</string>
    <string name="movie_release">Release : </string>
    <string name="movie_plot">Plot</string>

    <string name="title_trailers">Trailers</string>
    <string name="title_reviews">Reviews</string>

    <!--Text to share-->
    <string name="mime_type">text/plain</string>
    <string name="share_title">Share movie app</string>
    <string name="share_content">Check out the coolest app to view the most popular and top rated apps</string>

    <string name="spinner_sort_order">Popular</string>
    <string name="like_description">Like</string>

    <string-array name="sort_options">
        <item>@string/spinner_popular</item>
        <item>@string/spinner_top_rated</item>
        <item>@string/spinner_favourite</item>
    </string-array>

    <string name="loading_text">Loading cool stuff</string>
    <string name="description_empty">No Description available</string>
    <string name="trailers_list_empty">No Trailers available at the moment</string>
    <string name="reviews_list_empty">No Reviews available at the moment</string>
    <string name="network_error">Oops! something went wrong</string>
    <string name="add_to_favourite">Add to favourites</string>
    <string name="added_to_favourite">Added to favourites</string>
    <string name="empty_favourite_list">Your favourites are empty</string>
</resources>
