<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.iamdilipkumar.movies.movies.models.Movie" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.iamdilipkumar.movies.movies.MovieDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_movie_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/movie_banner"
                android:scaleType="fitStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="fitStart" />

                <LinearLayout
                    android:id="@+id/ll_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@{movie.title}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                        android:textColor="@color/colorSecondaryText"
                        tools:text="@string/movie_title" />

                    <TextView
                        android:id="@+id/tv_movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="monospace"
                        android:text="@{movie.releaseDate}"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="12sp"
                        tools:text="@string/movie_release" />

                    <TextView
                        android:id="@+id/tv_movie_average_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="monospace"
                        android:text="@{@string/movie_average_vote+Double.toString(movie.voteAverage)}"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="12sp"
                        tools:text="@string/movie_average_vote" />

                    <TextView
                        android:id="@+id/tv_movie_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="monospace"
                        android:text="@{@string/movie_language+movie.originalLanguage}"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="12sp"
                        tools:text="@string/movie_language" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/tv_movie_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:paddingBottom="16dp"
                android:text="@{movie.overview}"
                android:textColor="@color/colorSecondaryText"
                tools:text="@string/movie_plot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/title_trailers"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_start_and_end"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginStart="@dimen/margin_start_and_end"
                android:scrollbars="none" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="5dp"
                android:text="@string/title_reviews"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_start_and_end"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginStart="@dimen/margin_start_and_end"
                android:scrollbars="none" />
        </LinearLayout>

    </ScrollView>
</layout>
