<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.iamdilipkumar.movies.movies.MoviesListActivity">

    <LinearLayout
        android:id="@+id/rl_sort_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/filters_margin_top_and_bottom"
                android:layout_marginLeft="@dimen/margin_start_and_end"
                android:layout_marginStart="@dimen/margin_start_and_end"
                android:layout_marginTop="@dimen/filters_margin_top_and_bottom"
                android:layout_weight="1"
                android:text="@string/text_filters"
                android:textColor="@color/colorSecondaryText" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/filters_margin_top_and_bottom"
                android:layout_marginEnd="@dimen/margin_start_and_end"
                android:layout_marginRight="@dimen/margin_start_and_end"
                android:layout_marginTop="@dimen/filters_margin_top_and_bottom"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/s_sort_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:prompt="@string/spinner_sort_order" />
            </RelativeLayout>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movies_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/pb_loading_data"
        android:layout_width="@dimen/progress_bar_dimens"
        android:layout_height="@dimen/progress_bar_dimens"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_loading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/error_message"
        android:visibility="gone" />
</FrameLayout>
